# Machine-vision

1-Lektion/Jacob/OPG1/build-hello_world-Desktop_Qt_6_1_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  (+3 more)
2-Lektion/Exercise2_imageFiltering/: CMakeLists.txt  main.cpp
2-Lektion/build-Exercise2_imageFiltering-Desktop_Qt_6_1_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  Exercise2_imageFiltering  build.ninja  cmake_install.cmake
3-Lektion/Histograms/: CMakeLists.txt  main.cpp
3-Lektion/build-Histograms-Desktop_Qt_6_1_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Histograms  build.ninja  cmake_install.cmake
4-Lektion/Binary_vision/: CMakeLists.txt  main.cpp
4-Lektion/build-Binary_vision-Desktop_Qt_6_1_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  Binary_vision  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
5-Lektion/Geometric_Transform/: CMakeLists.txt  main.cpp
5-Lektion/build-Geometric_Transform-Desktop_Qt_6_1_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  Geometric_Transform  build.ninja  cmake_install.cmake
6-Lektion/Edges/: CMakeLists.txt  main.cpp
6-Lektion/build-Edges-Desktop_Qt_6_1_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Edges  build.ninja  cmake_install.cmake
7-Lektion/: build_command.txt
7-Lektion/Features/: CMakeLists.txt  main.cpp
7-Lektion/Features_SIFT/: CMakeLists.txt  main.cpp
7-Lektion/build-Features-Desktop_Qt_6_1_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Features  build.ninja  cmake_install.cmake
7-Lektion/build-Features_SIFT-Desktop_Qt_6_1_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  Features_SIFT  build.ninja  cmake_install.cmake
Obligatorisk Opgave/Obligatorisk_Opgave_Frekvens-baseret_billedebehandling/: CMakeLists.txt  main.cpp
Obligatorisk Opgave/build-Obligatorisk_Opgave_Frekvens-baseret_billedebehandling-Desktop_Qt_6_1_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  Obligatorisk_Opgave_Frekvens-baseret_billedebehandling  build.ninja  cmake_install.cmake
(+180 files in other folders)
